# updateme

./: .gitignore  CONTRIBUTING.md  README.md  config.py  config.sh  config.yml  install.sh  pyproject.toml  updateme.py  updateme.sh
.github/workflows/: ci.yml
modules/: __init__.py  headlines.py  headlines.sh  markets.py  markets.sh  weather.py  weather.sh
tests/: __init__.py  test_config.py  test_headlines.py  test_markets.py  test_weather.py
