[project]
name = "updateme"
version = "0.1.0"
description = "Daily terminal briefing: weather, headlines, and market data"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
updateme = "updateme:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "updateme.py",
    "config.py",
    "config.yml",
    "modules/",
]
